--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.10.0",
+    "less-loader": "^12.2.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
+    "stylus-loader": "^8.1.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "sass": "^1.72.0",
+    "stylus": "^0.63.0"
   }
 }
