--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
     "stylus-loader": "^8.1.0",
+    "thread-loader": "^4.0.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
